--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,13 +1,10 @@
-<% if Helpers.logged_in?(session) %>
-<%# <%= @error %> %>
+<% if logged_in? %>
   <form action='/tweets' method="post">
     Content:
     <input type="text" name="content"><br>
     Create Your Tweet:
 
     <input type="submit" name="submit" id="submit">
-
-    <input type="submit" name="submit">
 
   </form>
 
