--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,6 @@
-
 <p>Welcome, <%= current_user.username %></p>
 <% @tweets.each do |tweet| %>
-  <div>
     <%= tweet.content %>
-  </div>
 <% end %>
+
+<a href="/tweets/new">Create a tweet</a>
