--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,10 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Fwitter</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
   </head>
   <body>
-   <div class="container">
-       <%= yield %>
+    <div class="navbar">
+
+      <% if logged_in? %><a href="/tweets"><% else %><a href="/"><% end %><img src="/images/fwitter.png" id="logo"/></a>
+
+      <% if logged_in? %>
+      <a href="/logout"><div class="button" id="logout">Log out</div></a>
+      <a href="/users/<%= current_user.slug %>"><div class="button" id="profile"><img src="/images/profile-pic.png" alt="New tweet" /></div></a>
+      <a href="/tweets/new"><div class="button" id="new-tweet"><img src="/images/pencil-24.png" alt="New tweet" /></div></a>
+      <% end %>
+    </div>
+    <div class="wrapper">
+      <div class="content">
+        <%= yield %>
+      </div>
+    </div>
+
   </body>
 </html>
