--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,6 +1,14 @@
 <p>Welcome, <%= current_user.username %></p>
+<p>
+  Here's the latest:
+</p>
 <% @tweets.each do |tweet| %>
-    <%= tweet.content %>
-<% end %>
-
-<a href="/tweets/new">Create a tweet</a>
+<div class="tweet">
+  <div class="username">
+    <a href="/users/<%= tweet.user.slug %>">@<%= tweet.user.username %></a>
+  </div>
+  <div class="tweet-text">
+      <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a>
+  </div>
+</div>
+<% end%>
