--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,14 +1,43 @@
-<h3>Sign Up</h3>
-<form action="/signup" method="POST">
-Username: <input type="text" name="username">
-Email: <input type="text" name="email">
-Password: <input type="password" name="password">
-<input class="btn btn-primary" type="submit">
+<h1>Sign Up</h1>
+
+
+
+<p>
+  Create a username and password and join the world's largest conversation.
+</p>
+<form action="/signup" method="post">
+
+  <table>
+    <tr>
+      <td class="col-1">
+        <label>Username:</label>
+      </td>
+      <td class="textbox">
+        <input type="text" name="username" id=":username">
+      </td>
+    </tr>
+    <tr>
+      <td class="col-1">
+        <label>Email:</label>
+      </td>
+      <td class="textbox">
+        <input type="text" name="email" id=":email">
+      </td>
+    </tr>
+    <tr>
+      <td class="col-1">
+        <label>Password:</label>
+      </td>
+      <td class="textbox">
+        <input type="password" name="password" id=":password">
+      </td>
+    </tr>
+  </table>
+  <p>
+    <input class="submit" type="submit" value="Sign Up" id="submit">
+  </p>
 </form>
 
-<% if @user %>
-<h1>The Errors</h1>
-<% @user.errors.full_messages.each do |m|%>
-<p><%= m %></p>
-<% end %>
-<% end%>
+<p>
+  <a href="/login">Already have an account? Log in here.</a>
+</p>
