--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,9 +14,8 @@
       <% if logged_in? %><a href="/tweets"><% else %><a href="/"><% end %><img src="/images/fwitter.png" id="logo"/></a>
 
       <% if logged_in? %>
-      <a href="/logout"><div class="button" id="logout">Log out</div></a>
-      <a href="/users/<%= current_user.slug %>"><div class="button" id="profile"><img src="/images/profile-pic.png" alt="New tweet" /></div></a>
-      <a href="/tweets/new"><div class="button" id="new-tweet"><img src="/images/pencil-24.png" alt="New tweet" /></div></a>
+      <a href="/logout"><div class="button" id="logout">Log out</div></a>      
+      <a href="/tweets/new"><div class="button" id="new-tweet"><img src="/images/pencil.png" alt="New tweet" /></div></a>
       <% end %>
     </div>
     <div class="wrapper">
