--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,8 +7,14 @@
 
     <div class="container">
       <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
+      <% if logged_in? %>
+        <p><a href="/logout">Log Out</a></p>
+      <% else %>
+        <p><a href="/signup">Sign Up</a> or <a href="/login">Log In</a></p>
+      <% end%>
+      
+      <%= yield %>
+
     </div>
 
   </body>
